gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-rustc-allow-const-fn-unstable.rs
#![allow(unused_macros)]

#[rustc_allow_const_fn_unstable()] // { dg-error ".E0658." "" { target *-*-* } }
const fn foo() { }

fn main() {}

